# piece-emu

./: .gitignore  CLAUDE.md  LICENSE  PIECE_EMULATOR_DESIGN.md  README.md
docs/: emulator-agent-guide.md  headless-system-script.md  kernel-source-reference.md  llvm-s1c33-disassembler.md  mame-c33-reference.md  peripheral-implementation-status.md  piemu-implementation-reference.md  web-port-libretro.md
docs/piece-cd/: PIECE ハードウエア割り込み.html  PIECE ポート解説.html  basic operation and faq.html  hardware overview.html  piece-gpio-usage.txt  piece-hardware-interrrupt-usage.txt
docs/reports/: emulator-progress-report.md
src/: CMakeLists.txt  bus.cpp  bus.hpp  c33insn.hpp  cpu.hpp  cpu_class0.cpp  cpu_class1.cpp  cpu_class2.cpp  cpu_class3.cpp  cpu_class4.cpp  cpu_class5.cpp  cpu_class6.cpp  cpu_core.cpp  cpu_disasm.cpp  cpu_dispatch.cpp  cpu_impl.hpp  diag.cpp  elf_loader.cpp  gdb_rsp.cpp  gdb_rsp.hpp  gdb_rsp_impl.hpp  gdb_rsp_regs.cpp  headless_cli_config.cpp  headless_cli_config.hpp  headless_system_main.cpp  insn.hpp  main.cpp  peripheral_bcu_area.cpp  peripheral_bcu_area.hpp  peripheral_clkctl.cpp  peripheral_clkctl.hpp  peripheral_intc.cpp  peripheral_intc.hpp  peripheral_portctrl.cpp  peripheral_portctrl.hpp  peripheral_rtc.hpp  peripheral_t16.cpp  peripheral_t16.hpp  peripheral_t8.cpp  peripheral_t8.hpp  (+7 more)
src/board/: CMakeLists.txt  flash_sst39vf.cpp  flash_sst39vf.hpp  s6b0741.cpp  s6b0741.hpp
src/core/: CMakeLists.txt  bus.cpp  bus.hpp  cpu.hpp  cpu_class0.cpp  cpu_class1.cpp  cpu_class3.cpp  cpu_class4.cpp  cpu_class5.cpp  cpu_core.cpp  cpu_disasm.cpp  cpu_dispatch.cpp  diag.hpp  flash_device.hpp  tick.hpp
src/debug/: CMakeLists.txt  debug_utils.cpp  debug_utils.hpp  elf_loader.hpp  gdb_rsp.cpp  gdb_rsp.hpp  pfi_loader.cpp  pfi_loader.hpp  pfi_loader_blob.cpp  semihosting.cpp
src/host/: CMakeLists.txt  audio_log.cpp  audio_log.hpp  audio_output.cpp  audio_output.hpp  lcd_renderer.cpp  lcd_renderer.hpp  screenshot.cpp  screenshot.hpp
src/libretro/: CMakeLists.txt  README.md  piece_libretro.cpp  piece_libretro.info
src/soc/: CMakeLists.txt  peripheral_bcu_area.cpp  peripheral_bcu_area.hpp  peripheral_clkctl.cpp  peripheral_clkctl.hpp  peripheral_hsdma.cpp  peripheral_hsdma.hpp  peripheral_intc.cpp  peripheral_intc.hpp  peripheral_portctrl.cpp  peripheral_portctrl.hpp  peripheral_rtc.cpp  peripheral_rtc.hpp  peripheral_sif3.cpp  peripheral_sif3.hpp  peripheral_sound.cpp  peripheral_sound.hpp  peripheral_t16.cpp  peripheral_t16.hpp  peripheral_t8.cpp  peripheral_t8.hpp  peripheral_wdt.cpp  peripheral_wdt.hpp
src/system/: button_input.cpp  button_input.hpp  cli_config.cpp  cli_config.hpp  cpu_runner.cpp  cpu_runner.hpp  lcd_framebuf.hpp  named_button_input.cpp  named_button_input.hpp  pfi_writeback.cpp  pfi_writeback.hpp  piece_peripherals.cpp  piece_peripherals.hpp  platform_file.cpp  platform_file.hpp
src/tests/: make_test_elf.py  smoke_test.s
src/tests/bare_metal/: Makefile  crt0.s  crt_init.c  iram.ld  piece_emu_debug.h  semihosting.h  test_alu_flags.c  test_basic.c  test_branches.c  test_div.c  test_ext_imm.c  test_load_store.c  test_misc.c  test_multiply.c  test_shifts.c  test_softfloat_add.c
src/tests/unit/: test_bcu.cpp  test_cpu_instructions.cpp  test_disasm.cpp  test_ext_imm.cpp  test_flash_sst39vf.cpp  test_peripheral_intc.cpp  test_peripheral_portctrl.cpp  test_peripheral_rtc.cpp  test_peripheral_sif3.cpp  test_peripheral_sound.cpp  test_peripheral_t16.cpp  test_peripheral_t8.cpp  test_pfi_writeback.cpp  test_psr_flags.cpp  test_shift_decode.cpp
src/tools/: CMakeLists.txt  mkpfi.c  pfar.c  pffs.c  pffs.h  pffs_types.h  pfi.c  pfi.h  pfi_types.h  pieceif.h  pieceif_libusb.c  ripper.c
